--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+     "README.md",
+    "LICENSE"
   ],
   "exports": {
     ".": {
